[metadata]
name = aiorabbit
version = attr: aiorabbit.__version__.version
description = An AsyncIO RabbitMQ Client Library
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license-file = LICENSE
home-page = https://github.com/gmr/aiorabbit
project_urls =
    Bug Tracker = https://github.com/gmr/aiorabbit/issues
    Documentation = https://aiorabbit.readthedocs.io
    Source Code = https://github.com/gmr/aiorabbit/
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development
    Typing :: Typed
requires-dist = setuptools
keywords =
    amqp
    rabbitmq

[options]
include_package_data = True
install_requires =
    pamqp>=3.0.0a6,<4
    yarl>=1.4.2,<2
packages =
    aiorabbit
zip_safe = true

[options.extras_require]
test =
    coverage
    flake8
    flake8-comprehensions
    flake8-deprecated
    flake8-import-order
    flake8-print
    flake8-quotes
    flake8-rst-docstrings
    flake8-tuple
    mypy
    pygments
    pytest

[coverage:run]
branch = True
command_line = -m unittest discover --verbose
data_file = build/.coverage

[coverage:report]
show_missing = True
include =
    aiorabbit/*.py

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml

[flake8]
application-import-names = aiorabbit, tests
exclude = build,docs,env
ignore = RST306,RST307,RST399,W503
import-order-style = google
rst-directives = seealso
rst-roles = attr,class,const,data,exc,func,meth,mod,obj,ref,yields

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
no_implicit_optional = true
strict_optional = True
